# gRPC-WebRTC-rsbridge

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: tests.yml
grpc-webrtc-rsbridge/: Cargo.toml
grpc-webrtc-rsbridge/src/: main.rs
grpc-webrtc-rsbridge/src/grpc/: grpc_client.rs
grpc-webrtc-rsbridge/src/webrtc/: mod.rs  session.rs  stats.rs  webrtc_bridge.rs
reachy-api/: Cargo.toml  build.rs
reachy-api/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: listener.rs  main.rs  simulator.rs
src/: main.rs
src/grpc/: grpc_client.rs  mod.rs
src/webrtc/: session.rs  webrtc_bridge.rs
