[package]
name = "grpc-webrtc-rsbridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
reachy-api = { path = "../reachy-api" }
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
gst = { version = "0.23.4", package = "gstreamer" }
gst-plugin-webrtc = { version = "0.13.4", default-features = false }
gstwebrtc = { version = "0.23.4", package = "gstreamer-webrtc" }
glib = "0.20.7"
mpsc = "0.2.3"
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
tokio = "1.41.1"
signal-hook = "0.3.17"
regex = "1.11.1"
uuid = "1.11.0"
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime"] }
futures = "0.3.31"
serde_json = "1.0.133"
