[package]
name = "simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
gst = { version = "0.23.3", package = "gstreamer" }
gst-plugin-webrtc = { version = "0.13.3", default-features = false }
gstwebrtc = { version = "0.23.2", package = "gstreamer-webrtc" }
glib = "0.19"
mpsc = "0.2.3"
signal-hook = "0.3.17"