[package]
name = "simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
reachy-api = { path = "../reachy-api" }
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
gst = { version = "0.23.4", package = "gstreamer" }
gst-plugin-webrtc = { version = "0.13.4", default-features = false }
gstwebrtc = { version = "0.23.4", package = "gstreamer-webrtc" }
glib = "0.19"
mpsc = "0.2.3"
signal-hook = "0.3.17"
prost = "0.13.3"
